Completed: update add product feature, view product feature, add open update product page